# syphon

./: .gitmodules  CHANGES.md  Cargo.toml  DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  OPTIMIZATION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  ZERO_COPY_IMPLEMENTATION.md  test_client.rs
syphon-core/: Cargo.toml  build.rs
syphon-core/examples/: input_test.rs  simple_client.rs
syphon-core/src/: client.rs  directory.rs  error.rs  iosurface_ext.rs  lib.rs  metal_device.rs  server.rs  utils.rs
syphon-examples/: Cargo.toml  build.rs
syphon-examples/examples/: README.md  connect_rusty404.rs  connect_simple.rs  full_metal_sender.rs  metal_client.rs  metal_sender.rs  metal_syphon.rs  shader.wgsl  simple_client.rs  simple_metal_sender.rs  simple_sender.rs  simple_server.rs  syphon_sender.rs  test_client.rs  test_discovery.rs  wgpu_sender.rs
syphon-metal/: Cargo.toml
syphon-metal/src/: lib.rs
syphon-wgpu/: Cargo.toml
syphon-wgpu/examples/: README.md  compare_input.rs  debug_input.rs  display_shader.wgsl  input_test.rs  simple_test.rs  windowed_input.rs
syphon-wgpu/src/: bgra_to_rgba.wgsl  input.rs  input_fast.rs  input_optimized.rs  lib.rs  metal_interop.rs
