[package]
name = "syphon-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
syphon-core = { path = "../syphon-core" }
syphon-metal = { path = "../syphon-metal" }
syphon-wgpu = { path = "../syphon-wgpu" }
wgpu = "25.0"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.24"
objc = "0.2"
