[package]
name = "syphon-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-level wgpu integration for Syphon"
license = "MIT"
repository = "https://github.com/yourusername/rusty-404"

[dependencies]
syphon-core = { path = "../syphon-core" }
syphon-metal = { path = "../syphon-metal", features = ["wgpu"] }
wgpu = "25.0"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.24"
objc = "0.2"
io-surface = "0.15"
core-foundation = "0.9"
pollster = "0.3"

[dev-dependencies]
env_logger = "0.11"
pollster = "0.3"
